--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -8,12 +8,12 @@ services:
     volumes:
       - ../frontend/:/app/result_build/
 
-  db:
-    image: postgres:13.0-alpine
-    volumes:
-      - /var/lib/postgresql/data/
-    env_file:
-      - ../backend/.env
+ #db:
+ #  image: postgres:13.0-alpine
+ #  volumes:
+ #    - /var/lib/postgresql/data/
+ #  env_file:
+ #    - ../backend/.env
   
   backend:
     build:
@@ -22,8 +22,10 @@ services:
     volumes:
       - static_value:/app/static_backend/
       - media_value:/app/media/
+    #depends_on:
+    #  - db
     depends_on:
-      - db
+      - frontend
     env_file:
       - ../backend/.env
 
@@ -41,6 +43,6 @@ services:
       - backend
 
 volumes:
-  data:
+  #data:
   static_value:
   media_value:
