--- a/setup.cfg
+++ b/setup.cfg
@@ -9,8 +9,6 @@ exclude =
     env/
 per-file-ignores =
     */settings.py:E501,
-    */views.py:I005,
-    */views.py:I001,
-    */serializers.py:I005,
-    */serializers.py:I001,
+    */views.py:[I005, I001],
+    */serializers.py:[I005, I001],
 max-complexity = 10
