--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
-          pip install -r backend/requirements.txt
+          pip install -r requirements.txt
 
       - name: Test with flake8 and Django self tests
         run: |
@@ -47,7 +47,7 @@ jobs:
       - name: Push to DockerbHub
         uses: docker/build-push-action@v2
         with:
-          context: /backend
+          context: .
           file: /backend/Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram-project-react:latest
