--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Push to DockerbHub
         uses: docker/build-push-action@v2
         with:
-          context: .
+          context: backend/
           file: /backend/Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram-project-react:latest
