--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,9 +47,15 @@ jobs:
       - name: Push to DockerbHub
         uses: docker/build-push-action@v2
         with:
-          file: /backend/Dockerfile
+          context: backend/
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram
+      - name: Push frontend
+        uses: docker/build-push-action@v2 
+        with:
+          context: frontend/
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend
 
   deploy:
     runs-on: ubuntu-latest
