--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     needs: tests
-    
+
     if:
       contains('
         refs/heads/master
@@ -71,6 +71,8 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
+            mkdir -p foodgram-project-react
+            cd foodgram-project-react
             sudo docker-compose stop
             sudo docker-compose rm backend
             sudo docker image prune --force 
