--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,13 +45,13 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Push to DockerbHub
+      - name: Push backend to DockerbHub
         uses: docker/build-push-action@v2
         with:
-          context: backend/
+          file: /backend/Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram
-      - name: Push frontend
+      - name: Push frontend to DockerbHub
         uses: docker/build-push-action@v2 
         with:
           context: frontend/
