--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,9 +49,10 @@ jobs:
       - name: Push backend to DockerbHub
         uses: docker/build-push-action@v2
         with:
+          context: backend/
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram
-
+          
       - name: Push frontend to DockerbHub
         uses: docker/build-push-action@v2 
         with:
