--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,5 +4,5 @@ WORKDIR /app
 COPY ../backend/requirements.txt .
 RUN pip3 install -r requirements.txt --no-cache-dir
 COPY . .
-COPY ../infra .
+COPY ../infra/ .
 CMD ["gunicorn", "foodgram.wsgi:application", "--bind", "0:8000" ]
