--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,25 +45,18 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Push backend to DockerbHub
+      - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
-          context: backend/
+          context: ./backend
+          file: ./backend/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram
-          
-      - name: Push frontend to DockerbHub
-        uses: docker/build-push-action@v2 
-        with:
-          context: frontend/
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend
+          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram-project:latest
 
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
-
+    if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'
     steps:
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
@@ -71,23 +64,21 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_KEY }}
-          passphrase: ${{ secrets.PASSPHRASE }}
           script: |
-            mkdir -p foodgram-project-react
-            cd foodgram-project-react
-            sudo docker-compose stop
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram-project
+            sudo docker-compose stop
+            sudo docker-compose rm backend
+            rm .env
             touch .env
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
-            echo POSTGRES_DB=${{ secrets.DB_NAME }} >> .env
+            echo DB_NAME=${{ secrets.DB_NAME }} >> .env
             echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
             echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
-            echo SECRET_KEY="${{ secrets.SECRET_KEY }}" >> .env
-            sudo docker-compose rm backend
-            sudo docker-compose up -d --build
+            echo DJ_SECRET_KEY=${{ secrets.DJ_SECRET_KEY }} >> .env
+            sudo docker-compose up -d
             sudo docker-compose exec -T backend python manage.py makemigrations
             sudo docker-compose exec -T backend python manage.py migrate
             sudo docker-compose exec -T backend python manage.py collectstatic --no-input
