--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -3,7 +3,7 @@ services:
 
   frontend:
     build:
-      context: ../frontend
+      context: duncan/frontend
       dockerfile: Dockerfile
     volumes:
       - ../frontend/:/app/result_build/
@@ -17,7 +17,7 @@ services:
   
   backend:
     build:
-      context: ../backend/
+      context: duncan/backend/
       dockerfile: Dockerfile
     volumes:
       - static_value:/app/static_backend/
