--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,7 +88,7 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
-            mcdir -p backend
+            mkdir -p backend
             cd backend
             touch .env
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
