--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -2,10 +2,10 @@ version: '3.8'
 services:
 
   frontend:
-    #image: aleksandrkulagin/foodgram_frontend
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+    image: aleksandrkulagin/foodgram_frontend
+    #build:
+    #  context: ../frontend
+    #  dockerfile: Dockerfile
     volumes:
       - ../frontend/:/app/result_build/
 
@@ -17,10 +17,10 @@ services:
       - foodgram-project-react/.env
   
   backend:
-    #image: aleksandrkulagin/foodgram:latest
-    build:
-      context: ../backend/
-      dockerfile: Dockerfile
+    image: aleksandrkulagin/foodgram:latest
+    #build:
+    #  context: ../backend/
+    #  dockerfile: Dockerfile
     volumes:
       - static_value:/app/static_backend/
       - media_value:/app/media/
