--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,11 +73,10 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
+            sudo docker-compose stop
             sudo docker system prune --all
             mkdir -p foodgram-project-react
             cd foodgram-project-react
-            sudo docker-compose stop
-            mkdir -p foodgram-project-react
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend
       
@@ -108,7 +107,7 @@ jobs:
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
             cd infra
-            sudo docker-compose rm backend
+            # sudo docker-compose rm backend
             sudo docker-compose up -d --build
             sudo docker-compose exec -T backend python manage.py makemigrations
             sudo docker-compose exec -T backend python manage.py migrate
