--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     volumes:
       - /var/lib/postgresql/data/
     env_file:
-      - foodgram-project-react/.env
+      - backend/.env
   
   backend:
     image: aleksandrkulagin/foodgram:latest
@@ -27,7 +27,7 @@ services:
     depends_on:
       - db
     env_file:
-      - foodgram-project-react/.env
+      - backend/.env
 
   nginx:
     image: nginx:1.19.3
