--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,11 +74,10 @@ jobs:
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
             sudo docker-compose stop
+            sudo docker-compose rm backend
             sudo docker system prune --all
-            mkdir -p foodgram-project-react
-            cd foodgram-project-react
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend
+            sudo docker image pull ${{ secrets.DOCKER_USERNAME }}/foodgram
+            sudo docker image pull ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend
       
       - name: env create
         uses: appleboy/ssh-action@master
@@ -88,15 +87,14 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
-            cd backend
             touch .env
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
-            echo POSTGRES_DB=${{ secrets.DB_NAME }} >> .env
+            echo DB_NAME=${{ secrets.DB_NAME }} >> .env
             echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
             echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
             echo DB_HOST=${{ secrets.DB_HOST }} >> .env
             echo DB_PORT=${{ secrets.DB_PORT }} >> .env
-            echo SECRET_KEY="${{ secrets.SECRET_KEY }}" >> .env
+            echo SECRET_KEY=${{ secrets.SECRET_KEY }} >> .env
       
       - name: docker-compose up
         uses: appleboy/ssh-action@master
@@ -106,8 +104,6 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
-            cd infra
-            # sudo docker-compose rm backend
             sudo docker-compose up -d --build
             sudo docker-compose exec -T backend python manage.py makemigrations
             sudo docker-compose exec -T backend python manage.py migrate
