--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -106,10 +106,8 @@ jobs:
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
             cd infra
+            sudo docker-compose rm backend
             sudo docker-compose up -d --build
-            sudo docker-compose exec -T backend python manage.py makemigrations
-            sudo docker-compose exec -T backend python manage.py migrate
-            sudo docker-compose exec -T backend python manage.py collectstatic --no-input
   
   send_message:
     runs-on: ubuntu-latest
