--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     volumes:
       - /var/lib/postgresql/data/
     env_file:
-      - backend/.env
+      - .env
   
   backend:
     image: aleksandrkulagin/foodgram:latest
@@ -29,7 +29,7 @@ services:
     depends_on:
       - db
     env_file:
-      - backend/.env
+      - .env
 
   nginx:
     image: nginx:1.19.3
